# mcpx

./: LICENSE  README.md  pyproject.toml
mcp_ctl/: cli.py  config.py  registry.py
mcp_nest/: cli.py  config.py  registry.json  registry.py
mcp_stack/: cli.py  config.py  profiles.json  registry.py
mcpx/: cli.py  config.py  installer.py  registry.json  registry.py
tests/: test_cli.py  test_config.py  test_features.py  test_installer.py  test_registry.py
