[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-nest"
version = "0.1.0"
description = "A package manager for MCP servers — install, configure, and manage MCP servers across Claude Desktop, Cursor, and Windsurf"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
mcp-nest = "mcp_nest.cli:main"

[project.urls]
Homepage = "https://github.com/CharanBharathula/mcpx"
Repository = "https://github.com/CharanBharathula/mcpx"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["mcp_nest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
