[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-nest"
version = "0.1.1"
description = "A package manager for MCP servers — install, configure, and manage MCP servers across Claude Desktop, Cursor, and Windsurf"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Charan Bharathula", email = "bsaisuryacharan@gmail.com" }
]
keywords = ["mcp", "model-context-protocol", "ai", "claude", "cursor", "windsurf", "server", "package-manager"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
mcp-nest = "mcp_nest.cli:main"

[project.urls]
Homepage = "https://github.com/CharanBharathula/mcpx"
Repository = "https://github.com/CharanBharathula/mcpx"
"Bug Tracker" = "https://github.com/CharanBharathula/mcpx/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["mcp_nest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
